use permalink not rel

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -27,7 +27,7 @@
 	{{ if .Params.canonicalUrl }}
 	<link rel="canonical" href="{{ .Params.canonicalUrl }}">
 	{{ else }}
-	<link rel="canonical" href="{{ .RelPermalink }}">
+	<link rel="canonical" href="{{ .Permalink }}">
 	{{ end }}
 
 	{{ if and (isset .Site.Params "social") (.Site.Params.useCDN | default false) -}}
